// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NumberIcon /> Default story renders snapshot 1`] = `
<div
  class="p-8"
>
  <span
    aria-label="Step 1"
    class="text text--body-sm number-icon number-icon--base number-icon--lg"
    role="img"
  >
    1
  </span>
</div>
`;

exports[`<NumberIcon /> DifferentNumbers story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div>
    <span
      aria-label="Step 0"
      class="text text--body-sm number-icon number-icon--base number-icon--lg"
      role="img"
    >
      0
    </span>
    <span
      aria-label="Step 1"
      class="text text--body-sm number-icon number-icon--base number-icon--lg"
      role="img"
    >
      1
    </span>
    <span
      aria-label="Step 2"
      class="text text--body-sm number-icon number-icon--base number-icon--lg"
      role="img"
    >
      2
    </span>
    <span
      aria-label="Step 3"
      class="text text--body-sm number-icon number-icon--base number-icon--lg"
      role="img"
    >
      3
    </span>
    <span
      aria-label="Step 4"
      class="text text--body-sm number-icon number-icon--base number-icon--lg"
      role="img"
    >
      4
    </span>
    <span
      aria-label="Step 5"
      class="text text--body-sm number-icon number-icon--base number-icon--lg"
      role="img"
    >
      5
    </span>
    <span
      aria-label="Step 6"
      class="text text--body-sm number-icon number-icon--base number-icon--lg"
      role="img"
    >
      6
    </span>
    <span
      aria-label="Step 7"
      class="text text--body-sm number-icon number-icon--base number-icon--lg"
      role="img"
    >
      7
    </span>
    <span
      aria-label="Step 8"
      class="text text--body-sm number-icon number-icon--base number-icon--lg"
      role="img"
    >
      8
    </span>
    <span
      aria-label="Step 9"
      class="text text--body-sm number-icon number-icon--base number-icon--lg"
      role="img"
    >
      9
    </span>
    <span
      aria-label="Step 10"
      class="text text--body-sm number-icon number-icon--base number-icon--lg"
      role="img"
    >
      10
    </span>
    <span
      aria-label="Step 21"
      class="text text--body-sm number-icon number-icon--base number-icon--lg"
      role="img"
    >
      21
    </span>
    <span
      aria-label="Step 32"
      class="text text--body-sm number-icon number-icon--base number-icon--lg"
      role="img"
    >
      32
    </span>
    <span
      aria-label="Step 43"
      class="text text--body-sm number-icon number-icon--base number-icon--lg"
      role="img"
    >
      43
    </span>
    <span
      aria-label="Step 54"
      class="text text--body-sm number-icon number-icon--base number-icon--lg"
      role="img"
    >
      54
    </span>
    <span
      aria-label="Step 65"
      class="text text--body-sm number-icon number-icon--base number-icon--lg"
      role="img"
    >
      65
    </span>
    <span
      aria-label="Step 76"
      class="text text--body-sm number-icon number-icon--base number-icon--lg"
      role="img"
    >
      76
    </span>
    <span
      aria-label="Step 87"
      class="text text--body-sm number-icon number-icon--base number-icon--lg"
      role="img"
    >
      87
    </span>
    <span
      aria-label="Step 98"
      class="text text--body-sm number-icon number-icon--base number-icon--lg"
      role="img"
    >
      98
    </span>
  </div>
</div>
`;

exports[`<NumberIcon /> Incomplete story renders snapshot 1`] = `
<div
  class="p-8"
>
  <span
    aria-label="Step 1"
    class="text text--body-xs number-icon number-icon--base number-icon--sm number-icon--incomplete"
    role="img"
  >
    <svg
      class="icon number-icon__icon"
      fill="inherit"
      height="0.25rem"
      role="img"
      style="--icon-size: 0.25rem;"
      viewBox="0 0 24 24"
      width="0.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Incomplete
      </title>
      <path
        d="M12 22C10.6167 22 9.31667 21.7373 8.1 21.212C6.88333 20.6873 5.825 19.975 4.925 19.075C4.025 18.175 3.31267 17.1167 2.788 15.9C2.26267 14.6833 2 13.3833 2 12C2 10.6167 2.26267 9.31667 2.788 8.1C3.31267 6.88333 4.025 5.825 4.925 4.925C5.825 4.025 6.88333 3.31233 8.1 2.787C9.31667 2.26233 10.6167 2 12 2C13.3833 2 14.6833 2.26233 15.9 2.787C17.1167 3.31233 18.175 4.025 19.075 4.925C19.975 5.825 20.6873 6.88333 21.212 8.1C21.7373 9.31667 22 10.6167 22 12C22 13.3833 21.7373 14.6833 21.212 15.9C20.6873 17.1167 19.975 18.175 19.075 19.075C18.175 19.975 17.1167 20.6873 15.9 21.212C14.6833 21.7373 13.3833 22 12 22Z"
      />
    </svg>
  </span>
</div>
`;

exports[`<NumberIcon /> NumberIconList story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="flex flex-wrap gap-1"
  >
    <span
      aria-label="Item 1"
      class="text text--body-xs number-icon number-icon--base number-icon--sm"
      role="img"
    >
      1
    </span>
    <span
      aria-label="Item 2"
      class="text text--body-xs number-icon number-icon--base number-icon--sm number-icon--incomplete"
      role="img"
    >
      <svg
        class="icon number-icon__icon"
        fill="inherit"
        height="0.25rem"
        role="img"
        style="--icon-size: 0.25rem;"
        viewBox="0 0 24 24"
        width="0.25rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          incomplete step 2
        </title>
        <path
          d="M12 22C10.6167 22 9.31667 21.7373 8.1 21.212C6.88333 20.6873 5.825 19.975 4.925 19.075C4.025 18.175 3.31267 17.1167 2.788 15.9C2.26267 14.6833 2 13.3833 2 12C2 10.6167 2.26267 9.31667 2.788 8.1C3.31267 6.88333 4.025 5.825 4.925 4.925C5.825 4.025 6.88333 3.31233 8.1 2.787C9.31667 2.26233 10.6167 2 12 2C13.3833 2 14.6833 2.26233 15.9 2.787C17.1167 3.31233 18.175 4.025 19.075 4.925C19.975 5.825 20.6873 6.88333 21.212 8.1C21.7373 9.31667 22 10.6167 22 12C22 13.3833 21.7373 14.6833 21.212 15.9C20.6873 17.1167 19.975 18.175 19.075 19.075C18.175 19.975 17.1167 20.6873 15.9 21.212C14.6833 21.7373 13.3833 22 12 22Z"
        />
      </svg>
    </span>
    <span
      aria-label="Item 3"
      class="text text--body-xs number-icon number-icon--base number-icon--sm"
      role="img"
    >
      3
    </span>
    <span
      aria-label="Item 4"
      class="text text--body-xs number-icon number-icon--base number-icon--sm number-icon--incomplete"
      role="img"
    >
      <svg
        class="icon number-icon__icon"
        fill="inherit"
        height="0.25rem"
        role="img"
        style="--icon-size: 0.25rem;"
        viewBox="0 0 24 24"
        width="0.25rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          incomplete step 4
        </title>
        <path
          d="M12 22C10.6167 22 9.31667 21.7373 8.1 21.212C6.88333 20.6873 5.825 19.975 4.925 19.075C4.025 18.175 3.31267 17.1167 2.788 15.9C2.26267 14.6833 2 13.3833 2 12C2 10.6167 2.26267 9.31667 2.788 8.1C3.31267 6.88333 4.025 5.825 4.925 4.925C5.825 4.025 6.88333 3.31233 8.1 2.787C9.31667 2.26233 10.6167 2 12 2C13.3833 2 14.6833 2.26233 15.9 2.787C17.1167 3.31233 18.175 4.025 19.075 4.925C19.975 5.825 20.6873 6.88333 21.212 8.1C21.7373 9.31667 22 10.6167 22 12C22 13.3833 21.7373 14.6833 21.212 15.9C20.6873 17.1167 19.975 18.175 19.075 19.075C18.175 19.975 17.1167 20.6873 15.9 21.212C14.6833 21.7373 13.3833 22 12 22Z"
        />
      </svg>
    </span>
    <span
      aria-label="Item 5"
      class="text text--body-xs number-icon number-icon--base number-icon--sm number-icon--incomplete"
      role="img"
    >
      <svg
        class="icon number-icon__icon"
        fill="inherit"
        height="0.25rem"
        role="img"
        style="--icon-size: 0.25rem;"
        viewBox="0 0 24 24"
        width="0.25rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          incomplete step 5
        </title>
        <path
          d="M12 22C10.6167 22 9.31667 21.7373 8.1 21.212C6.88333 20.6873 5.825 19.975 4.925 19.075C4.025 18.175 3.31267 17.1167 2.788 15.9C2.26267 14.6833 2 13.3833 2 12C2 10.6167 2.26267 9.31667 2.788 8.1C3.31267 6.88333 4.025 5.825 4.925 4.925C5.825 4.025 6.88333 3.31233 8.1 2.787C9.31667 2.26233 10.6167 2 12 2C13.3833 2 14.6833 2.26233 15.9 2.787C17.1167 3.31233 18.175 4.025 19.075 4.925C19.975 5.825 20.6873 6.88333 21.212 8.1C21.7373 9.31667 22 10.6167 22 12C22 13.3833 21.7373 14.6833 21.212 15.9C20.6873 17.1167 19.975 18.175 19.075 19.075C18.175 19.975 17.1167 20.6873 15.9 21.212C14.6833 21.7373 13.3833 22 12 22Z"
        />
      </svg>
    </span>
    <span
      aria-label="Item 6"
      class="text text--body-xs number-icon number-icon--base number-icon--sm number-icon--incomplete"
      role="img"
    >
      <svg
        class="icon number-icon__icon"
        fill="inherit"
        height="0.25rem"
        role="img"
        style="--icon-size: 0.25rem;"
        viewBox="0 0 24 24"
        width="0.25rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          incomplete step 6
        </title>
        <path
          d="M12 22C10.6167 22 9.31667 21.7373 8.1 21.212C6.88333 20.6873 5.825 19.975 4.925 19.075C4.025 18.175 3.31267 17.1167 2.788 15.9C2.26267 14.6833 2 13.3833 2 12C2 10.6167 2.26267 9.31667 2.788 8.1C3.31267 6.88333 4.025 5.825 4.925 4.925C5.825 4.025 6.88333 3.31233 8.1 2.787C9.31667 2.26233 10.6167 2 12 2C13.3833 2 14.6833 2.26233 15.9 2.787C17.1167 3.31233 18.175 4.025 19.075 4.925C19.975 5.825 20.6873 6.88333 21.212 8.1C21.7373 9.31667 22 10.6167 22 12C22 13.3833 21.7373 14.6833 21.212 15.9C20.6873 17.1167 19.975 18.175 19.075 19.075C18.175 19.975 17.1167 20.6873 15.9 21.212C14.6833 21.7373 13.3833 22 12 22Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`<NumberIcon /> Small story renders snapshot 1`] = `
<div
  class="p-8"
>
  <span
    aria-label="Step 1"
    class="text text--body-xs number-icon number-icon--base number-icon--sm"
    role="img"
  >
    1
  </span>
</div>
`;

exports[`<NumberIcon /> Success story renders snapshot 1`] = `
<div
  class="p-8"
>
  <span
    aria-label="Step 1"
    class="text text--body-sm number-icon number-icon--success number-icon--lg"
    role="img"
  >
    1
  </span>
</div>
`;

exports[`<NumberIcon /> SuccessSmall story renders snapshot 1`] = `
<div
  class="p-8"
>
  <span
    aria-label="Step 1"
    class="text text--body-xs number-icon number-icon--success number-icon--sm"
    role="img"
  >
    1
  </span>
</div>
`;
